# relative-pose-estimation

./: .gitignore  CMakeLists.txt  README.md  demo.cpp  four-point-helper.cpp  four-point.cpp  four-point.hpp  perf_test.cpp  perf_test_forward.cpp  perf_test_forward2.cpp  perf_test_odonoise.cpp  perf_test_sideway.cpp  perf_test_sideway2.cpp  ransac_test.cpp
cmake/: FindCholmod.cmake
eigen/.hg/: dirstate
eigen/.hg/cache/: branchheads  tags
eigen/.hg/store/: 00changelog.d  00changelog.i  00manifest.i  fncache  undo
eigen/.hg/store/data/: _c_make_lists.txt.i  _c_test_config.cmake.i  _c_test_custom.cmake.in.i  ~2ehgeol.i  ~2ehgignore.i  ~2ehgtags.i
eigen/.hg/store/data/_eigen/: _cholesky.i  _cholmod_support.i  _core.i  _eigen.i  _eigen2_support.i  _geometry.i  _iterative_linear_solvers.i  _l_u.i  _pa_sti_x_support.i  _q_r.i  _s_p_q_r_support.i  _s_v_d.i  _sparse.i  _sparse_cholesky.i  _sparse_core.i  _sparse_l_u.i  _sparse_q_r.i  _std_deque.i  _std_list.i  _std_vector.i  _super_l_u_support.i  _umf_pack_support.i
eigen/.hg/store/data/bench/: bench__gemm.cpp.i  bench__norm.cpp.i  eig33.cpp.i  spmv.cpp.i
eigen/.hg/store/data/bench/btl/: _c_make_lists.txt.i
eigen/.hg/store/data/bench/spbench/: spbenchstyle.h.i
eigen/.hg/store/data/blas/: _c_make_lists.txt.i  _packed_selfadjoint_product.h.i  _r_e_a_d_m_e.txt.i  _rank2_update.h.i  common.h.i  double.cpp.i  level1__cplx__impl.h.i  level1__impl.h.i  level1__real__impl.h.i  level2__cplx__impl.h.i  level2__impl.h.i  level2__real__impl.h.i  level3__impl.h.i  xerbla.cpp.i
eigen/.hg/store/data/cmake/: _eigen_configure_testing.cmake.i  _eigen_determine_v_s_service_pack.cmake.i  _eigen_testing.cmake.i  _find_cholmod.cmake.i  _find_eigen3.cmake.i  _find_f_f_t_w.cmake.i  _find_metis.cmake.i  _find_s_p_q_r.cmake.i  _find_umfpack.cmake.i  language__support.cmake.i
eigen/.hg/store/data/demos/opengl/: quaternion__demo.cpp.i  trackball.cpp.i
eigen/.hg/store/data/doc/: _a05___porting_from2_to3.dox.i  _a10___eigen2_support_modes.dox.i  _ascii_quick_reference.txt.i  _b01___experimental.dox.i  _c01___tutorial_matrix_class.dox.i  _c09___tutorial_sparse.dox.i  _c_make_lists.txt.i  _customizing_eigen.dox.i  _doxyfile.in.i  _fixed_size_vectorizable.dox.i  _functions_taking_eigen_types.dox.i  _manual.dox.i  _overview.dox.i  _preprocessor_directives.dox.i  _quick_reference.dox.i  _sparse_linear_systems.dox.i  _sparse_quick_reference.dox.i  _stl_containers.dox.i  _struct_having_eigen_members.dox.i  _template_keyword.dox.i  _topic_aliasing.dox.i  _topic_linear_algebra_decompositions.dox.i  _topic_multithreading.dox.i  _tutorial_geometry.dox.i  _tutorial_linear_algebra.dox.i  _tutorial_matrix_class.dox.i  _tutorial_reductions_visitors_broadcasting.dox.i  _tutorial_sparse.dox.i  _using_intel_m_k_l.dox.i  eigendoxy.css.i  eigendoxy__footer.html.in.i
eigen/.hg/store/data/doc/examples/: _c_make_lists.txt.i  _tutorial_lin_alg_inverse_determinant.cpp.i
eigen/.hg/store/data/doc/snippets/: _c_make_lists.txt.i  _eigen_solver__eigenvectors.cpp.i  _partial_redux__count.cpp.i  compile__snippet.cpp.in.i
eigen/.hg/store/data/doc/special__examples/: _c_make_lists.txt.i  _tutorial__sparse__example.cpp.i  _tutorial__sparse__example__details.cpp.i
eigen/.hg/store/data/failtest/: _c_make_lists.txt.i
eigen/.hg/store/data/lapack/: _c_make_lists.txt.i  cholesky.cpp.i  complex__double.cpp.i  complex__single.cpp.i  double.cpp.i  eigenvalues.cpp.i  lapack__common.h.i  lu.cpp.i  single.cpp.i
eigen/.hg/store/data/scripts/: buildtests.in.i  eigen__gen__docs.i
eigen/.hg/store/data/test/: _c_make_lists.txt.i  adjoint.cpp.i  array.cpp.i  array__for__matrix.cpp.i  array__replicate.cpp.i  array__reverse.cpp.i  bandmatrix.cpp.i  basicstuff.cpp.i  bicgstab.cpp.i  block.cpp.i  cholesky.cpp.i  cholmod__support.cpp.i  conjugate__gradient.cpp.i  conservative__resize.cpp.i  corners.cpp.i  cwiseop.cpp.i  determinant.cpp.i  diagonal.cpp.i  diagonalmatrices.cpp.i  dynalloc.cpp.i  eigen2support.cpp.i  eigensolver__complex.cpp.i  eigensolver__generalized__real.cpp.i  eigensolver__generic.cpp.i  eigensolver__selfadjoint.cpp.i  evaluators.cpp.i  exceptions.cpp.i  first__aligned.cpp.i  geo__alignedbox.cpp.i  geo__eulerangles.cpp.i  geo__homogeneous.cpp.i  geo__hyperplane.cpp.i  geo__orthomethods.cpp.i  geo__parametrizedline.cpp.i  geo__quaternion.cpp.i  geo__transformations.cpp.i  householder.cpp.i  inverse.cpp.i  jacobi.cpp.i  jacobisvd.cpp.i  (+61 more)
eigen/.hg/store/data/test/eigen2/: _c_make_lists.txt.i  eigen2__adjoint.cpp.i  eigen2__basicstuff.cpp.i  (+9 more)
five-point-gb/: five-point.cpp
five-point-groebner/: CMakeLists.txt  five-point.cpp
five-point-nister/: CMakeLists.txt  five-point.cpp  five-point.hpp
four-point-groebner/: CMakeLists.txt  four-point-groebner.cpp  four-point-groebner.hpp
four-point-numerical/: CMakeLists.txt  four-point-numerical-helper.hpp  four-point-numerical.cpp  four-point-numerical.hpp
include/: five-point.hpp  four-point-groebner.hpp  four-point-numerical.hpp  four-point.hpp  selectPose.hpp
misc/: A.txt  eq.txt  eq6.txt  four-point.mw  fourpoint.m  fourpoint.txt  groebener.m  n-point.cpp  poly.mw  polyeigen.m  polyeigen2.m  process.m  process2.m  solve2.m  test.m
misc/tex/: IEEEabrv.bib  IEEEbcpat.bib  IEEEexample.bib  IEEEfull.bib  forward_minimal.eps  forward_ransac.eps  ieeeconf.cls  loopy.eps  main.bib  main.dvi  main.ps  main.tex  odonoise.eps  sample_new.tex  setting.eps  setting.ps  sideway_minimal.eps  sideway_ransac.eps
one-point/: CMakeLists.txt  one-point.cpp
src/: CMakeLists.txt  four-point-groebner.cpp  four-point-numerical.cpp  four-point.cpp  one-point.cpp
test/: CMakeLists.txt  perf_test_failure.cpp  perf_test_forward.cpp  perf_test_forward2.cpp  perf_test_odonoise.cpp  perf_test_odonoise2.cpp  perf_test_sideway.cpp  perf_test_sideway2.cpp  perf_test_timing.cpp  perf_test_vcharge.cpp  perf_test_vcharge2.cpp  test_1pt.cpp  test_4pt_groebner.cpp
test/sparse_graph/: CMakeLists.txt  Odometer.cc  Odometer.h  SparseGraph.cc  SparseGraph.h
test/sparse_graph/pugixml/: CMakeLists.txt
test/sparse_graph/tinyxml2/: CMakeLists.txt
(+322 files in other folders)
